--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,26 @@ div.searchbar {
 * {
   background-color: black;
 }
+
+.arrow {
+  border: solid white;
+  color: white;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 1rem;
+}
+
+.arrow:focus {
+  outline: none;
+  color: red;
+}
+
+.right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
+.left {
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+}
