--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,8 @@ div.searchbar {
 
 .arrow {
   border: solid white;
-  color: white;
+  color: black;
+  background-color: transparent;
   border-width: 0 3px 3px 0;
   display: inline-block;
   padding: 1rem;
@@ -26,7 +27,10 @@ div.searchbar {
 
 .arrow:focus {
   outline: none;
-  color: red;
+}
+
+.arrow:hover {
+  outline: auto;
 }
 
 .right {
